Fix spacing on about section on small screen

--- a/Personal-Portfolio-App/src/components/About/About.css
+++ b/Personal-Portfolio-App/src/components/About/About.css
@@ -137,19 +137,35 @@
     margin: 40px 0;
   }
 }
-@media (max-width: 500px) {
-   .skills-list{
+@media (max-width: 580px) {
+  .skills-list {
     display: grid;
-    grid-template-columns: repeat(3 , 1fr);
-   }
-   .skills-list span {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .skills-list span {
+    padding: 20px;
+    border-radius: 15px;
+  }
+}
+@media (max-width: 500px) {
+  .skills-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .skills-list span {
     padding: 20px;
     border-radius: 20px;
-   }
+  }
 }
 @media (max-width: 480px) {
   .skills-title {
     margin: 40px 0;
+  }
+}
+@media (max-width: 400px) {
+  .skills-list{
+    position: relative;
+    left: -15px;
   }
 }
 
